Name:                normaldistribution
Version:             1.0
License:             BSD3
License-File:        LICENSE
Copyright:           Bjorn Buckwalter 2011
Author:              Bjorn Buckwalter 
Maintainer:          bjorn.buckwalter@gmail.com
Stability:           Stable
--Homepage:            https://github.com/bjornbm/normaldistribution
Synopsis:

    Minimum fuss normally distributed random values.

Description:

    ddddd

Category:            Math
Build-Type:          Simple
Build-Depends:       base < 5, haskell98 < 1.1
Exposed-Modules:     Data.Random.Normal
Extra-source-files:  README, LICENSE

